--- a/index.html
+++ b/index.html
@@ -6,7 +6,33 @@
     <title>Title</title>
 </head>
 <body>
-<p>Hello world!</p>
+<header>
+    <nav>
+        <ul>
+            <li>Case Studies</li>
+            <li>Services</li>
+            <li>Contact Us</li>
+        </ul>
+    </nav>
+    <div class="header-inner-container">
+        <h1 class="header-h1">Your website is an investment in the success of your business.</h1>
+        <p class="header-p">We are here to help you succeed.</p>
+        <button type="button">Let's work together</button>
+        <img class="header-img" src="assets/squiggle_line_stripe.svg" alt="squiggle line stripe"/>
+    </div>
+</header>
+
+<main>
+    <div class="introduction">
+        <div class="headings-intro">
+            <h2>Rekupe is a digital agency in Los Angeles.</h2>
+            <h2>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h2>
+            <h2>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h2>
+        </div>
+        <p>Have a question? <a href="/">Click here</a> to contact us!</p>
+    </div>
+
+</main>
 
 </body>
 </html>
