worked on the work area

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>Contact Us</li>
         </ul>
     </nav>
-    <div class="header-inner-container">
+    <div class="header-div inner-container">
         <h1 class="header-h1">Your website is an investment in the success of your business.</h1>
         <p class="header-p">We are here to help you succeed.</p>
         <button type="button">Let's work together</button>
@@ -23,7 +23,7 @@
 </header>
 
 <main>
-    <div class="introduction">
+    <div class="introduction inner-container">
         <div class="headings-intro">
             <h2>Rekupe is a digital agency in Los Angeles.</h2>
             <h2>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h2>
@@ -31,6 +31,40 @@
         </div>
         <p>Have a question? <a href="/">Click here</a> to contact us!</p>
     </div>
+
+    <section class="work">
+        <div class="work-inner-container">
+        <article class="work-article">
+            <div class="work-paragraph">
+                <h2>Rolling Stone</h2>
+                <img class="squiggle-line" src="assets/squiggle_line.svg">
+                <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.</p>
+                <a href="/">View project</a>
+            </div>
+            <span class="image-wrapper-rolling-stone">
+                <img src="assets/work-image-01.jpeg" alt="rolling stone"/>
+            </span>
+        </article>
+        <article class="work-article-reverse">
+            <div class="work-paragraph">
+                <h2>Variety</h2>
+                <img class="squiggle-line" src="assets/squiggle_line.svg">
+                <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
+                <a href="/">View project</a>
+            </div>
+            <span class="image-wrapper-variety"><img src="assets/work-image-02.jpeg" alt="variety"/></span>
+        </article>
+        <article class="work-article">
+            <div class="work-paragraph">
+                <h2>Worth</h2>
+                <img class="squiggle-line" src="assets/squiggle_line.svg">
+                <p>A global media platform connecting a community that embraces worth beyond wealth.</p>
+                <a href="/">View project</a>
+            </div>
+            <span class="image-wrapper-worth"><img src="assets/work-image-03.jpeg" alt="worth"/></span>
+        </article>
+        </div>
+    </section>
 
 </main>
 
